# climbing_app

./: .gitignore  .pdm-python  New_Route.py  app.py  controller.py  foot_handler.py  hold.py  hold_handler.py  image_utils.py  main_load_route.py  notes.txt  pyproject.toml  requirements.txt  route.py  route_adder.py  route_handler.py  route_visualiser.py  todo.md
Finalised Copies/: Mark_Holds.py
analysis/: count_holds.py  count_jugs.py
app_components/: grades_filter_listbox.py  main_window.py  option_buttons.py  route_canvas.py  routes_listbox.py
draft_files/: Codenames.py  Coord_List.txt  Image.py  Image_Setup.py
draft_files/New_Image_Coords/: New_Coord_List.txt  Old_Coord_List.txt  coord_modifier.py
draft_files/new_route_draft/: New_Route.py  routes.csv
initial_setup/: Coord_List.txt  Image_Setup.py
initial_setup/set2/: Coord_List.txt
model/: hold_handler.py  route.py  route_handler.py
other/: main.py
static/: Coord_List.txt  EXPECTED_FILES.md  holds.csv  routes.csv
view/: grades_filter_listbox.py  main_view.py  option_buttons.py  route_canvas.py  route_editor.py  route_menu.py  routes_listbox.py
