[project]
name = "climbing_app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ceguest", email = "claire.e.guest1@gmail.com"},
]
dependencies = [
    "pandas",
    "opencv-python",
    "pillow",
    "numpy"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
